# ai-battle-arena

./: .gitignore  Cargo.toml  README.md  profile_performance.bat  test_batch.bat  test_headless.bat  test_single_visual.bat
configs/: game_config.toml  simulation_modes.toml
data/states/: game_state_20250526_234319.json  game_state_20250526_235322.json
src/: main.rs
src/ai/: bridge.rs  communication.rs  controller.rs  integration.rs  mod.rs  random.rs  team.rs
src/config/: game_config.rs  mod.rs  simulation_mode.rs
src/engine/: batch_runner.rs  game_loop.rs  headless.rs  mod.rs  physics.rs  replay.rs  state.rs  state_serialization.rs  unified.rs
src/game/: combat_system.rs  mod.rs  turn_manager.rs  victory.rs
src/performance/: metrics.rs  mod.rs  profiler.rs
src/ui/: hud.rs  mod.rs  overlay.rs
src/units/: components.rs  health.rs  mod.rs  movement.rs  spawning.rs
src/utils/: logger.rs  metrics.rs  mod.rs
src/world/: actions.rs  hex_grid.rs  mod.rs  resource.rs  spatial_index.rs  unit.rs
